create blog page and accordion

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <span class="donate-total">0</span>BDT
                 </p>
               </div>
-              <h2>Donate for Flood at Noakhali, Bangladesh </h2>
+              <h2 class="donation-name">Donate for Flood at Noakhali, Bangladesh </h2>
               <p>The recent floods in Noakhali have caused significant damage to homes infrastructure. Your donation will help provide essential supplies and to those affected by this disaster. Every contribution, big or small, makes difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need</p>
               <input class="border border-1 p-4 w-full donation-input" type="text" name="" id="input-amount" placeholder="Type Your Amount" />
               <button class="donet-button w-full rounded-lg py-4 bg-green-300">Donate Now</button>
@@ -87,9 +87,9 @@
                   <span class="donate-total">0</span>BDT
                 </p>
               </div>
-              <h2>Donate for Flood at Feni, Bangladesh </h2>
+              <h2 class="donation-name">Donate for Flood at Feni, Bangladesh </h2>
               <p>The recent floods in Feni have caused significant damage to homes infrastructure. Your donation will help provide essential supplies and to those affected by this disaster. Every contribution, big or small, makes difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need</p>
-              <input class="border-1 border-red-950 donation-input" type="text" name="" id="input-amount" placeholder="Type Your Amount" />
+              <input class="border border-1 p-4 w-full donation-input" type="text" name="" id="input-amount" placeholder="Type Your Amount" />
               <button  class="donet-button w-full rounded-lg py-4 bg-green-300">Donate Now</button>
             </div>
           </article>
@@ -105,7 +105,7 @@
                   <span class="donate-total">0</span>BDT
                 </p>
               </div>
-              <h2>Donate for Flood at Quakata, Bangladesh </h2>
+              <h2 class="donation-name">Donate for Flood at Quakata, Bangladesh </h2>
               <p>The recent floods in Quakata have caused significant damage to homes infrastructure. Your donation will help provide essential supplies and to those affected by this disaster. Every contribution, big or small, makes difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need</p>
               <input class="border border-1 p-4 donation-input" type="text" name="" id="input-amount" placeholder="Type Your Amount" />
               <button class="donet-button w-full rounded-lg py-4 bg-green-300">Donate Now</button>
@@ -114,9 +114,9 @@
         </section>
       
 <!-- History data  -->
-    <section  class="container mx-auto" id="history-section">
+    <section  class="container mx-auto mt-10 hidden" id="history-section">
         <div class="p-5 bg-slate-200 ">
-            <h2><span>0</span>Taka is Donated for famine-2024 at Feni, Bangladesh</h2>
+            <h2 class="text-xl"><span>0 </span> Taka is Donated for famine-2024 at Feni, Bangladesh</h2>
             <p>time</p>
           </div>
     </section>
